<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.mehuljoisar.lockscreen.ConfigActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_pin"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20dp"/>

            <EditText
                    android:id="@+id/texto"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/texto_escribe_pin"
                    android:inputType="number"
                    android:maxLength="6"
                    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/texto_contacto_sms"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:textSize="20dp"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/seleccionar"
                    android:id="@+id/selectionButton"
                    android:layout_marginBottom="20dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="Nombre"
                    android:id="@+id/contactName"
                    android:layout_alignParentTop="false"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/selectionButton" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:id="@+id/contactPhone"
                    android:layout_below="@+id/contactName"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:text="Teléfono" />

            </RelativeLayout>

                <EditText
                    android:id="@+id/correo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Introduce tu correo electronico"
                    android:inputType="textEmailAddress"
                    />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nota"
                android:textStyle="bold"
                android:textSize="18dp"/>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Se activara una alarma al errar 5 veces el PIN"
                android:textStyle="italic"
                android:textSize="20dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Guardar Configuracion"
                android:id="@+id/guardar"
                android:layout_marginBottom="20dp" />

        </LinearLayout>

    </ScrollView>
</LinearLayout>
